# orbi_zsv_bot

./: .pre-commit-config.yaml  README.md  docker-compose-local.yml  env.example
.github/workflows/: check_codestyle_pep8.yml
bot/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
bot/src/: main.py
bot/src/app/: __init__.py  orbi_bot.py
bot/src/app/handlers/: buttons_constants.py  constant_buttons.py  constants_handlers.py  menu_keyboards.py  message.py  search_request.py  utils.py
bot/src/app/handlers/forms/: another_help_form.py  base_form.py  birthday_form.py  constants.py  handlers.py  keyboards.py  processing.py  run_form.py
bot/src/app/middleware/: antispam.py  constants_middleware.py
bot/src/core/: aio_client.py  config.py  exceptions.py  logger.py
bot/src/filters/: date.py
bot/src/utils/: commands_menu.py  markup_processing.py  menu_processing.py  request_processing.py  user_processing.py  utils_constants.py
bot/tests/: conftest.py  test_forms_handlers.py  test_handlers.py  test_http_client.py
expert-system/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  setup.cfg
expert-system/expert_system/: manage.py  pytest.ini
expert-system/expert_system/api/: __init__.py  serializers.py  urls.py
expert-system/expert_system/data_handler/: __init__.py  admin.py  admin_forms.py  apps.py  models.py  views.py
expert-system/expert_system/data_handler/management/commands/: find_answer.py
expert-system/expert_system/data_handler/migrations/: 0001_initial.py  0001_text_is_published.py  0002_textbuttonslugarhive.py  request_field_tsvector_field_trigger.py
expert-system/expert_system/expert_system/: __init__.py  settings.py  urls.py  utils.py  wsgi.py
expert-system/expert_system/tests/: README.md  common.py  conftest.py  test_admin.py  test_api.py  test_commands.py  test_models.py  test_utils.py
expert-system/expert_system/tests/fixtures/: fixtures_data.py
expert-system/expert_system/users/: __init__.py  admin.py  models.py
expert-system/expert_system/users/management/commands/: bot_token.py
expert-system/expert_system/users/migrations/: 0001_initial.py
registration-system/: .env.example  Dockerfile  README.md  celery.Dockerfile  docker-entrypoint.sh  flower.Dockerfile  pyproject.toml  setup.cfg
registration-system/alembic/: env.py
registration-system/app/: celery_worker.py  main.py
registration-system/app/api/: enums.py  routers.py
registration-system/app/api/endpoints/: __init__.py  forms.py
registration-system/app/core/: base.py  config.py  db.py  logger.py
registration-system/app/crud/: base.py  forms.py
registration-system/app/models/: another_form.py  base_form.py  birthday_form.py  run_form.py
registration-system/app/schemas/: forms.py
registration-system/tests/: conftest.py  test_forms.py
registration-system/tests/fixtures/: user.py
